# rag_project

./: .gitignore  .pre-commit-config.yaml  README.md  eval_compare.py  pyproject.toml  shared_models.py
api/: .env.example  Dockerfile  README.md  app.py  config.py  gunicorn.conf.py  logging_config.py  pyproject.toml
api/core/: llm.py  rag.py  utils.py
api/graph/: rag_graph.py  state.py
api/graph/nodes/: retriever.py
api/models/: __init__.py
api/router/: chat.py  health.py
api/tests/: conftest.py
api/vectordb/: qdrant.py
doc_pipeline/: .env.example  README.md  main.py  models.py  pyproject.toml  xml2json.py
doc_pipeline/metadata/: metadata.py
doc_pipeline/source/: source.py
doc_pipeline/store/: store.py
doc_pipeline/transform/: transform.py
mongodb/: README.md
pipeline/: .pylintrc  main.py  pyproject.toml
pipeline/scrape/: scrape.py
vector_pipeline/: .env.example  README.md  main.py  models.py  pyproject.toml
vector_pipeline/chunk/: chunk.py  rule_based_chunk.py
vector_pipeline/embed/: embed.py
vector_pipeline/extract/: extract.py
vector_pipeline/load/: store.py
vectordb/: README.md
