[project]
name = "rag-project"
version = "0.1.0"
description = "RAG project with pipeline and API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pylint>=3.0.0",
    "pre-commit>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | build
  | dist
)/
'''

[tool.pylint.main]
py-version = "3.13"
recursive = true
ignore = [".venv", "__pycache__", "build", "dist"]

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "W0212",  # protected-access (useful in tests)
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 8
max-attributes = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
