[project]
name = "rag-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic",
    "fastapi[standard]",
    "langchain",
    "langchain-openai",
    "langchain-anthropic",
    "langgraph>=0.2",
    "qdrant-client",
    "python-dotenv",
    "pydantic",
    "tenacity>=9.1.4",
    "gunicorn",
]

[dependency-groups]
dev = [
    "pylint>=3.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.15.8",
]

[tool.pylint.messages_control]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
]

[tool.ruff]
line-length = 100
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "graph", "models", "router", "vectordb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
